@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,8 +32,12 @@
  *          java.instrument
  *          jdk.jartool/sun.tools.jar
  * @run main RedefineClassHelper
- * @run main/othervm -javaagent:redefineagent.jar RedefineRunningMethodsWithBacktrace
+ * @compile --enable-preview -source ${jdk.version} RedefineRunningMethodsWithBacktrace.java
+ * @run main/othervm --enable-preview -javaagent:redefineagent.jar RedefineRunningMethodsWithBacktrace platform
+ * @run main/othervm --enable-preview -javaagent:redefineagent.jar RedefineRunningMethodsWithBacktrace virtual
  */
+
+import java.util.concurrent.ThreadFactory;
 
 import static jdk.test.lib.Asserts.*;
 
@@ -81,41 +85,43 @@ class RedefineRunningMethodsWithBacktrace_B {
 
 public class RedefineRunningMethodsWithBacktrace {
 
-    public static String newB =
-                "class RedefineRunningMethodsWithBacktrace_B {" +
-                "   static int count1 = 0;" +
-                "   static int count2 = 0;" +
-                "   public static volatile boolean stop = false;" +
-                "  static void localSleep() { " +
-                "    try{ " +
-                "      Thread.sleep(10);" +
-                "    } catch(InterruptedException ie) { " +
-                "    } " +
-                " } " +
-                "   public static void infinite() { " +
-                "       System.out.println(\"infinite called\");" +
-                "   }" +
-                "   public static void throwable() { " +
-                "       throw new RuntimeException(\"throwable called\");" +
-                "   }" +
-                "}";
+    public static String newB = """
+                class RedefineRunningMethodsWithBacktrace_B {
+                    static int count1 = 0;
+                    static int count2 = 0;
+                    public static volatile boolean stop = false;
+                    static void localSleep() {
+                        try {
+                            Thread.sleep(10);
+                        } catch(InterruptedException ie) {
+                        }
+                    }
+                    public static void infinite() {
+                        System.out.println("infinite called");
+                    }
+                    public static void throwable() {
+                        throw new RuntimeException("throwable called");
+                    }
+                }
+                """;
 
-    public static String evenNewerB =
-                "class RedefineRunningMethodsWithBacktrace_B {" +
-                "   static int count1 = 0;" +
-                "   static int count2 = 0;" +
-                "   public static volatile boolean stop = false;" +
-                "  static void localSleep() { " +
-                "    try{ " +
-                "      Thread.sleep(1);" +
-                "    } catch(InterruptedException ie) { " +
-                "    } " +
-                " } " +
-                "   public static void infinite() { }" +
-                "   public static void throwable() { " +
-                "       throw new RuntimeException(\"throwable called\");" +
-                "   }" +
-                "}";
+    public static String evenNewerB = """
+                class RedefineRunningMethodsWithBacktrace_B {
+                    static int count1 = 0;
+                    static int count2 = 0;
+                    public static volatile boolean stop = false;
+                    static void localSleep() {
+                        try {
+                            Thread.sleep(1);
+                        } catch(InterruptedException ie) {
+                        }
+                    }
+                    public static void infinite() {}
+                    public static void throwable() {
+                        throw new RuntimeException("throwable called");
+                    }
+                }
+                """;
 
     private static void touchRedefinedMethodInBacktrace(Throwable throwable) {
         System.out.println("touchRedefinedMethodInBacktrace: ");
@@ -149,11 +155,11 @@ public class RedefineRunningMethodsWithBacktrace {
 
     public static void main(String[] args) throws Exception {
 
-        new Thread() {
-            public void run() {
-                RedefineRunningMethodsWithBacktrace_B.infinite();
-            }
-        }.start();
+        ThreadFactory factory = args[0].equals("platform")
+                ? Thread.ofPlatform().factory()
+                : Thread.ofVirtual().factory();
+
+        factory.newThread(RedefineRunningMethodsWithBacktrace_B::infinite).start();
 
         Throwable t1 = getThrowableInB();
 
